# jsbsim-ffi

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
c_wrapper/: jsbsim_wrapper.cpp  jsbsim_wrapper.h
examples/: aoa_vs_cas.rs  basic_atmosphere.rs  cannonball.rs  elevator_doublet.rs  fly.rs  rudder_kick.rs  script_example.rs  simple.rs  simple_flight.rs  thrust_vectoring.rs  trim_envelope.rs  wind_batch.rs  wind_fly.rs
examples/common/: mod.rs
src/: lib.rs
tests/: jsbsim_tests.rs  test_smoke.rs
