[package]
name = "jsbsim-ffi"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/jonititan/jsbsim-ffi"
description = "A wrapper around the C++ JSBSim library to allow its use in rust"

[dependencies]


[dev-dependencies]
crossterm = "0.28"

[build-dependencies]
cc = "1.1"
pkg-config = "0.3"
